Text colour and alignment issues fixed

--- a/src/Assets/scss/base/_general.scss
+++ b/src/Assets/scss/base/_general.scss
@@ -13,7 +13,7 @@ html {
 }
 
 body {
-  color: $primary-font-color;
+  //color: $primary-font-color;
   font-family: font-family(nt-primary, regular);
   font-size: $primary-font-size;
   -moz-font-smoothing: antialiased;
